--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,5 +6,8 @@
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2"
+  },
+  "scripts":{
+    "start": "node server/index.js"
   }
 }
