--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,13 +1,15 @@
 {
   "dependencies": {
+    "axios": "^1.5.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cron": "^3.1.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2"
   },
-  "scripts":{
+  "scripts": {
     "start": "node server/index.js"
   }
 }
